spendwise-backend/k8s/money_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spendwise-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spendwise-backend
  template:
    metadata:
      labels:
        app: spendwise-backend
    spec:
      containers:
        - name: spendwise-backend
          image: shravrocks/spendwise-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /api/health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: spendwise-backend-service
spec:
  selector:
    app: spendwise-backend
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: LoadBalancer
