spendwise-backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spendwise-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: spendwise.local
      http:
        paths:
          # Backend API
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: spendwise-backend-service
                port:
                  number: 80

          # Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spendwise-frontend-service
                port:
                  number: 3000
